--- a/snakeGame.html
+++ b/snakeGame.html
@@ -1,17 +1,21 @@
 <html>
     <head>
       <title>스네이크 게임</title><link rel="icon" href="./image/favicon.png">
+      <meta charset="utf-8">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.min.js"></script>
         <link rel="stylesheet" type="text/css" href="form_game.css">
     </head>
     <body>
-      <div id="grid">
-        <div><a href="index.html">홈 페이지</a></div>
-        <div><a href="poker.html">포커하러 가기</a></div>
-        <div><a href="typing.html">타자연습 하러가기</a></div>
-        <div><a href="dodge.html">닷지 하러가기</a></div>
-        </div>
+      <header>
+        <nav>
+          <div><a href="index.html">홈 페이지</a></div>
+          <div><a href="poker.html">포커하러 가기</a></div>
+          <div><a href="typing.html">타자연습 하러가기</a></div>
+          <div><a href="dodge.html">닷지 하러가기</a></div>
+        </nav>
+      </header>
     </body>
+    <main>
     <script>
     
 // 뱀의 형상은 작은 조각(segment)들로 구성되는데,
@@ -195,4 +199,5 @@ function keyPressed() {
 }
 
     </script>
+    </main>
 </html>
