--- a/index.html
+++ b/index.html
@@ -6,29 +6,40 @@
 <link rel="stylesheet" type="text/css" href="form_main.css">
 </head>
 <body>
-    
-    <h1><a href="index.html" title="홈페이지로 이동">홈페이지</a></h1>
-<div id="grid">
-    <div>
-        <ul>
-            <li><a class="lists" href="typing.html" target="_blank">타자 연습 하러 가기</a></li>
+    <header>
+        <h1><a href="index.html" title="홈페이지로 이동">홈페이지</a></h1>
+    </header>
+    <nav>
+        <a class="lists" href="typing.html" target="_blank">타자 연습 하러 가기</a>
+        <a class="lists" href="poker.html"target="_blank">컴퓨터와 포커 하러 가기</a>
+        <a class="lists" href="dodge.html"target="_blank">탄막 피하기 게임 하러 가기</a>
+        <a class="lists" href="snakeGame.html"target="_blank">스네이크 게임 하러 가기</a>
+    </nav>
+    <main style = "text-align: center;">
+        <article>
+            <p> <img src="./image/main.png" width="700px" height="700px" >
+                <br>
+                간단한 미니게임을 즐겨봅시다. 왼쪽의 목록에서 게임을 선택하여 게임 화면으로 이동하실 수 있습니다.<br><br>
+                미니게임은 총 4종류가 있습니다.<br>
+                컴퓨터와 포커하기, 3가지 난이도의 미니 타자 연습, 사방에서 날아오는 총알 피하기 게임, 맵에 랜덤으로 등장하는 먹이를 먹는 스네이크 게임이 있습니다.<br>
+                탄막 피하기와 스네이크 게임은 게임 시작 전에 조작 방법을 설명해주니 확인하고 게임을 즐겨주세요.
+            </p>
+        <article>
+    </main>
+    <br><br><br><br><br><br>
+    <footer style="text-align: center;">
+        <p>
+            <img src="./image/logo.png" style="display: inline;"><img src="./image/logo2.png"style="display: inline; width:100px;"><img src="./image/product.png"style="display: inline; height:100px;">
+            <br>저는 현재 군산대학교 소프트웨어학부 컴퓨터정보공학전공 3학년 재학중입니다.
+            <br>게임을 만드는 것에 관심이 있습니다.
+            <br>현재는 개인적으로 백준 문제풀이와 언리얼 엔진으로 게임을 제작하는 방법을 공부하고 있습니다.
+            <br>게임 서버와 시스템 프로그래밍을 공부할 예정입니다.
             <br>
-            <li><a class="lists" href="poker.html"target="_blank">컴퓨터와 포커 하러 가기</a></li>
             <br>
-            <li><a class="lists" href="dodge.html"target="_blank">탄막 피하기 게임 하러 가기</a></li>
             <br>
-            <li><a class="lists" href="snakeGame.html"target="_blank">스네이크 게임 하러 가기</a></li>
             <br>
-        </ul>
-    </div>
-    <div>
-        <p><img src="./image/main.png" width="700px" height="700px" ></p>
-        <p> 간단한 미니게임을 즐겨봅시다. 왼쪽의 목록에서 게임을 선택하여 게임 화면으로 이동하실 수 있습니다.</p>
-        <p> 미니게임은 총 4종류로, 컴퓨터와 즐기는 포커, 3가지 난이도의 미니 타자 연습, 사방에서 날아오는 탄막 피하기 게임, 맵에 랜덤으로 등장하는 먹이를 먹는 스네이크 게임이 있습니다.
-            <br>탄막 피하기와 스네이크 게임은 게임 시작 전에 조작 방법을 설명해주니 확인하고 게임을 즐겨주세요.
         </p>
-    </div>
-</div>
+    </footer>
 </body>
 </html>
 
